<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="40dp"/>

            <TextView
                android:id="@+id/selectLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btnRussian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/russian"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnSpanish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spanish"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>